--- a/build
+++ b/build
@@ -8,7 +8,7 @@ root_dir=$(cd $(dirname $0); echo $(pwd))
 bower install
 
 #cd "$root_dir"
-mvn install eclipse:eclipse
+mvn -Ptest install eclipse:eclipse
 
 rm -rf */.settings/
 
