--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "angular": "~1.5.7",
     "angular-route": "~1.5.7",
+    "angular-resource": "~1.5.7",
     "angular-animate": "~1.5.7",
     "bootswatch": "~3.3.6",
     "jquery.inputmask": "~3.1.0",
