movido seed para testes da base de dados

--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
   </properties>
   <modules>
     <module>poo-library-modelo</module>
-    <module>poo-library-app</module>
+    <module>poo-library-seed</module>
     <module>poo-library-comum</module>
     <module>poo-library-dao-comum</module>
     <module>poo-library-dao-activejdbc</module>
