--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     <module>poo-library-dao-memory</module>
     <module>poo-library-app-web</module>
     <module>poo-library-dao-jpa</module>
+    <module>poo-library-app-web-dto</module>
   </modules>
   <build>
     <plugins>
