--- a/poo-library-dao-jpa/pom.xml
+++ b/poo-library-dao-jpa/pom.xml
@@ -52,9 +52,9 @@
     </dependency>
 
     <dependency>
-      <groupId>com.zaxxer</groupId>
-      <artifactId>HikariCP</artifactId>
-      <version>2.4.7</version>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-hikaricp</artifactId>
+      <version>${version.hibernate}</version>
     </dependency>
 
     <dependency>
