--- a/poo-library-app-web/pom.xml
+++ b/poo-library-app-web/pom.xml
@@ -14,6 +14,8 @@
   <name>poo-library-app-web</name>
   <properties>
 
+    <jdk.version>1.7</jdk.version>
+
     <version.jersey>2.23.1</version.jersey>
     <version.jetty>9.3.9.M0</version.jetty>
 
@@ -153,6 +155,15 @@
   <build>
     <finalName>ROOT</finalName>
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.5.1</version>
+        <configuration>
+          <source>${jdk.version}</source>
+          <target>${jdk.version}</target>
+        </configuration>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
