--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
     "angular-route": "~1.5.7",
     "angular-resource": "~1.5.7",
     "angular-animate": "~1.5.7",
-    "bootswatch": "~3.3.6",
+    "jquery": "~2.2.4",
+    "bootswatch": "3.3.6",
     "jquery.inputmask": "~3.1.0",
     "angular-loading-bar": "^0.9.0"
   }
