--- a/poo-library-dao-jpa/pom.xml
+++ b/poo-library-dao-jpa/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+<project
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
   xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
@@ -17,6 +18,7 @@
 
     <version.hibernate>5.2.1.Final</version.hibernate>
     <version.mysql.driver>5.1.39</version.mysql.driver>
+    <version.postgresql.driver>9.4.1209</version.postgresql.driver>
   </properties>
   <dependencies>
     <dependency>
@@ -61,6 +63,13 @@
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
       <version>${version.mysql.driver}</version>
+      <scope>runtime</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>${version.postgresql.driver}</version>
       <scope>runtime</scope>
     </dependency>
 
