--- a/poo-library-app-web/pom.xml
+++ b/poo-library-app-web/pom.xml
@@ -151,6 +151,13 @@
       <artifactId>modelmapper</artifactId>
       <version>0.7.5</version>
     </dependency>
+
+    <dependency>
+      <groupId>ma.glasnost.orika</groupId>
+      <artifactId>orika-core</artifactId>
+      <version>1.4.6</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>ROOT</finalName>
