--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "devDependencies": {
     "mocha": "~2.3.1",
     "chai": "~3.2.0",
-    "chai-http": "~1.0.0"
+    "chai-http": "~1.0.0",
+    "node-uuid": "~1.4"
   },
   "scripts": {
     "postinstall": "bower install"
